# server

./: .buildinfo  .coveragerc  .dockerignore  .editorconfig  .gitignore  .graphqlconfig  README.rst  flake.nix  index.html  manage.py  mypy.ini  objects.inv  pyproject.toml  searchindex.js  shell.nix
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docs.yml
_sources/guide/: api.rst.txt  libraries.rst.txt
docker/: Dockerfile  entrypoint.sh  manage.sh  tumpara.sh
docs/: conf.py  index.rst  settings.rst  setup.rst
docs/docker-compose/: .tumpara.env  docker-compose.yml
docs/guide/: libraries.rst  quickstart.rst  timeline.rst
docs/reference/: storage.rst
genindex/: index.html
guide/api/: index.html
guide/libraries/: index.html
guide/quickstart/: index.html
guide/timeline/: index.html
nix/: dependencyOverrides.nix  django_3_set_spatialite_lib.patch  mypy_tomli_types.patch
nix/python-packages/: blurhash.nix  django-stubs-ext.nix  django-stubs.nix  graphene-django.nix  graphene-gis.nix  graphene-types.nix  inotifyrecursive.nix  pygments-graphql.nix  pytest-mypy-plugins.nix  rawpy.nix  singledispatch.nix  types-PyYAML.nix  types-backports.nix  types-freezegun.nix  types-pillow.nix  types-python-dateutil.nix  types-pytz.nix  types-setuptools.nix  types-six.nix  types-toml.nix  types-typed-ast.nix
reference/storage/: index.html
search/: index.html
settings/: index.html
setup/: index.html
tests/: conftest.py  settings.py
tests/test_accounts/: api.py  apps.py  models.py  test_member_api.py  test_memberships.py  test_user_api.py
tests/test_api/: api.py  apps.py  models.py  test_create_update_mutations.py  test_scalar_filters.py
tests/test_collections/: api.py  apps.py  models.py  test_archiving_api.py  test_collections_api.py
tests/test_gallery/: test_filtersets.py  test_photos.py  test_raws.py
tests/test_multimedia/: api.py  apps.py  models.py  test_previews.py
tests/test_storage/: api.py  apps.py  models.py  test_api.py  test_backends.py  test_librarycontent.py  test_scanner.py  test_scanning.py
tests/test_timeline/: api.py  apps.py  models.py  test_albums_api.py  test_entry_filtersets.py  test_stack_api.py  test_stacks.py  test_timeline_api.py
tests/test_timeline/migrations/: 0001_initial.py
tumpara/: __init__.py  __main__.py  urls.py  utils.py  wsgi.py
tumpara/accounts/: admin.py  apps.py  models.py
tumpara/accounts/api/: __init__.py  schema.py  types.py
tumpara/accounts/migrations/: 0001_initial.py
tumpara/api/: __init__.py  filtering.py  schema.py  util.py
tumpara/collections/: apps.py  models.py
tumpara/collections/api/: __init__.py  archiving.py  collections.py  filtersets.py  schema.py
tumpara/content/gallery/: admin.py  apps.py  models.py  util.py
tumpara/multimedia/: apps.py  models.py  preview_cache.py  views.py
tumpara/multimedia/api/: __init__.py  types.py
tumpara/settings/: __init__.py  base.py  dev.py  development.py  loader.py  prod.py  testing.py
tumpara/static/: admin-custom.css
tumpara/storage/: __init__.py  admin.py  apps.py  models.py  views.py
tumpara/testing/: __init__.py  conftest.py  demo_backend.py  fixtures.py  strategies.py  utils.py
tumpara/timeline/: admin.py  apps.py  models.py  util.py
(+35 files in other folders)
