[tool.poetry]
name = "tumpara"
version = "0.1.0"
description = "Server component of Tumpara, a self-hosted solution for managing home media libraries."
authors = ["Yannik Rödel <hey@yannik.info>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8"
blurhash-python = "^1.1.1"
Django = "^3.2.6"
django-cors-headers = "^3.7.0"
graphene-django = "^2.15.0"
graphene-gis = "^0.0.6"
inotifyrecursive = "^0.3.5"
Pillow = "^8.4.0"
psycopg2-binary = "^2.9.1"
py3exiv2 = "^0.9.3"
python-dateutil = "^2.8.2"
rawpy = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
django-stubs = "^1.9.0"
freezegun = "^1.1.0"
graphene-types = "^0.15.1"
hypothesis = "^6.14.5"
isort = "^5.9.3"
mypy = "^0.910"
pygments-graphql = {version = "^1.0.0", extras = ["docs"]}
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
PyYAML = "^5.4.1"
selenium = "^3.141.0"
Sphinx = {version = "^4.1.2", extras = ["docs"]}
sphinx-rtd-theme = {version = "^0.5.2", extras = ["docs"]}
types-freezegun = "^1.1.2"
types-Pillow = "^8.3.7"
types-python-dateutil = "^2.8.2"
types-toml = "^0.10.1"
types-typed-ast = "^1.4.5"
types-backports = "^0.1.3"
types-setuptools = "^57.4.2"
types-six = "^1.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "graphene_types.resolver_plugin"]

[tool.django-stubs]
django_settings_module = "tumpara.settings.development"

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = "((tests|tumpara)/.*/migrations/.*\\.py)"

[tool.isort]
profile = "black"
skip_glob = ["tests/**/migrations/*.py", "tumpara/**/migrations/*.py"]
